[project]
name = "learn-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "html2text>=2025.4.15",
    "ipykernel>=6.29.5",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.23",
    "langchain-text-splitters>=0.3.8",
    "langchain-upstage>=0.6.0",
    "langgraph>=0.4.1",
    "markdown>=3.8",
    "nest-asyncio>=1.6.0",
    "py-zerox>=0.0.7",
    "pymupdf>=1.25.5",
    "pypdf>=4.3.1",
    "pyppeteer>=2.0.0",
    "python-dotenv>=1.1.0",
]
